# source-stdin

./: Cargo.toml  LICENSE
src/: lib.rs
